--- a/index.sass
+++ b/index.sass
@@ -100,3 +100,57 @@ h1
     @include media($mobile)
       @include span-columns(6 of 6)
       @include omega(1n)
+
+#sec4
+  @include outer-container
+
+  #soundbites
+    @include span-columns(8 of 12)
+    @include shift(2)
+
+    .soundbite
+      @include span-columns(1 of 4)
+      @include omega(4n)
+
+      position: relative
+      margin-top: 40px
+      border: 6px solid #000
+      padding: 10px
+      height: 140px
+      font-size: 20px
+      line-height: 30px
+
+      #player
+        width: 100%
+        height: 100%
+        position: absolute
+        top: 0
+        left: 0
+        background-color: #000
+        opacity: 0
+        text-align: center
+        font-size: 40px
+        padding-top: 42px
+
+        &:hover
+          opacity: 1
+
+        &.active
+          opacity: 1
+
+        .fa-pause
+          display: none
+
+        i
+          color: white
+
+footer
+  @include outer-container
+
+  padding: 30px 0
+  background-color: #000
+  margin-top: 80px
+  color: #FFF
+
+  p
+    text-align: center
