--- a/index.sass
+++ b/index.sass
@@ -110,44 +110,57 @@ h1
 
     .soundbite
       @include media($desktop)
-        @include span-columns(1 of 4)
-        @include omega(4n)
+        @include span-columns(2 of 4)
+        @include omega(2n)
 
       @include media($mobile)
-        @include span-columns(1 of 2)
-        @include omega(2n)
+        @include span-columns(1 of 1)
+        @include omega(n)
 
       position: relative
       margin-top: 40px
-      border: 6px solid #000
-      padding: 10px
-      height: 140px
-      font-size: 20px
-      line-height: 30px
+      height: 100px
+
+      p
+        padding: 0
+        margin: 0
+
+      .title
+        font-size: 20px
+        margin-top: 10px
+        margin-bottom: 10px
+
+      .author, .years
+        font-size: 16px
+
+      .author
+        margin-bottom: 2px
+
+      .years
+        color: #888
 
       #player
-        width: 100%
-        height: 100%
         position: absolute
         top: 0
-        left: 0
-        background-color: #000
-        opacity: 0
+        right: 0
+        border: 6px solid #000
+        height: 90px
+        width: 90px
+        background-color: white
         text-align: center
         font-size: 40px
-        padding-top: 42px
-
-        &:hover
-          opacity: 1
+        padding-top: 17px
+        padding-left: 2px
 
         &.active
-          opacity: 1
+          background-color: #000
 
         .fa-pause
           display: none
-
-        i
           color: white
+
+        .fa-play
+          color: black
 
 footer
   @include outer-container
