--- a/index.css
+++ b/index.css
@@ -37,7 +37,8 @@ h1 {
 
 #intro {
   width: 60%;
-  margin: 6% auto; }
+  margin: 6% auto;
+  font-size: 1.1em; }
 
 #sec1, #sec3 {
   background-color: #000;
@@ -52,12 +53,14 @@ h1 {
     content: "";
     border-bottom: 100px solid #fff;
     border-right: 2000px solid transparent; }
-  @media screen and (min-width: 600px) {
-    #sec1 p, #sec3 p {
-      padding: 50px 0 50px 80px; } }
-  @media screen and (max-width: 600px) {
-    #sec1 p, #sec3 p {
-      padding: 50px 60px 10px 60px; } }
+  #sec1 p, #sec3 p {
+    font-size: 1.1em; }
+    @media screen and (min-width: 600px) {
+      #sec1 p, #sec3 p {
+        padding: 50px 0 50px 80px; } }
+    @media screen and (max-width: 600px) {
+      #sec1 p, #sec3 p {
+        padding: 50px 60px 10px 60px; } }
   @media screen and (min-width: 600px) {
     #sec1 iframe, #sec3 iframe {
       padding: 20px 80px 20px 0; } }
@@ -65,13 +68,15 @@ h1 {
     #sec1 iframe, #sec3 iframe {
       padding: 10px 60px 50px 60px; } }
 
-@media screen and (min-width: 600px) {
-  #sec2 p {
-    padding: 50px 80px 50px 0;
-    text-align: right; } }
-@media screen and (max-width: 600px) {
-  #sec2 p {
-    padding: 10px 60px 0 60px; } }
+#sec2 p {
+  font-size: 1.1em; }
+  @media screen and (min-width: 600px) {
+    #sec2 p {
+      padding: 50px 80px 50px 0;
+      text-align: right; } }
+  @media screen and (max-width: 600px) {
+    #sec2 p {
+      padding: 10px 60px 0 60px; } }
 @media screen and (min-width: 600px) {
   #sec2 iframe {
     padding: 0 0 10px 80px; } }
