--- a/index.sass
+++ b/index.sass
@@ -32,6 +32,7 @@ h1
 #intro
   width: 60%
   margin: 6% auto
+  font-size: 1.1em
 
 #sec1, #sec3
   background-color: #000
@@ -50,6 +51,8 @@ h1
     border-right: 2000px solid transparent
 
   p
+    font-size: 1.1em
+
     @include media($desktop)
       padding: 50px 0 50px 80px
 
@@ -65,6 +68,8 @@ h1
 
 #sec2
   p
+    font-size: 1.1em
+
     @include media($desktop)
       padding: 50px 80px 50px 0
       text-align: right
