--- a/index.sass
+++ b/index.sass
@@ -22,11 +22,10 @@ body
 
 #logo
   display: block
-  width: 40%
-  margin: 0 auto
+  height: 250px
+  margin: 50px auto 50px
 
 h1
-  margin-top: -4%
   text-align: center
 
 #intro
@@ -108,6 +107,11 @@ h1
 
 #sec4
   @include outer-container
+
+  #soundbites_intro
+    text-align: center
+    font-size: 1.2em
+    font-weight: bold
 
   #soundbites
     @include span-columns(8 of 12)
